package com.example.domain;

public enum Gender {
    MALE,
    FEMALE,
    OTHER,
    PREFERNOTTOSAY
}