package com.example.domain;

public enum MachineStatus {
    ACTIVE,
    INACTIVE,
    MAINTENANCE,
    BROKEN
}