package com.example.domain;

public enum MaintenanceType {
    NORMAL,
    SPECIAL
}