package com.example.domain;

public enum RequestStatus {
    PENDING,
    ACCEPTED,
    COMPLETED
}